# ClawPass

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
autoresearch/: README.md  benchmark-pack.fast.json  benchmark-pack.full.json  program.md
docs/: architecture.md  clawpass-agent-policy-gateway-handoff.md  integration-guide.md  ledger-setup.md  openapi.json  openapi.md  operator-runbook.md  passkey-guide.md  recovery-model.md  threat-model.md  webhook-operations.md
examples/: generic_fastapi_producer.py  scotty_adapter.py
scripts/: check_sdk_roundtrip.py  check_ts_sdk_roundtrip.ts  repo_autoresearch_eval.py
src/clawpass_sdk_py/: __init__.py  client.py
src/clawpass_server/: app.py  main.py
src/clawpass_server/adapters/: ethereum_adapter.py  webauthn_adapter.py
src/clawpass_server/api/: routes.py
src/clawpass_server/core/: audit.py  auth.py  config.py  constants.py  database.py  policy.py  schemas.py  service.py  utils.py  webhooks.py
src/clawpass_server/web/: app.js  approve.html  approve.js  common.js  index.html  invite.html  invite.js  login.html  login.js  setup.html  setup.js  styles.css
src/ledgerclaw_sdk_py/: __init__.py  client.py
src/ledgerclaw_server/: __init__.py  app.py  main.py
src/ledgerclaw_server/adapters/: ethereum_adapter.py  webauthn_adapter.py
src/ledgerclaw_server/api/: routes.py
src/ledgerclaw_server/core/: audit.py  config.py  constants.py  policy.py  schemas.py  service.py  utils.py  webhooks.py
src/ledgerclaw_server/web/: app.js  index.html
tests/: conftest.py  test_api.py  test_sdk_py.py  test_service.py
ts-sdk/: README.md  package.json
ts-sdk/src/: index.ts
